--- a/src/app/pages/pelicula/pelicula.component.html
+++ b/src/app/pages/pelicula/pelicula.component.html
@@ -1,12 +1,12 @@
-<div class="row animate__animated animate__fadeIn animate__faster" *ngIf="pelicula">
-    <div class="col-md-3 col-12">
+<div class="pelicula-container row animate__animated animate__fadeIn animate__faster" *ngIf="pelicula">
+    <div class="col-md-3 col-12 image-container">
         <!-- Imagen -->
         <img [src]="pelicula.poster_path | poster" 
              [alt]="pelicula.title"
              class="img-thumbnail">
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6 pelicula-info-container">
         <h3>{{ pelicula.title }}</h3>
 
         <div class="row">
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div class="row mt-3">
+        <div class="row mt-3 pelicula-sipnosis">
             <div class="col-12 text-white">
                 {{ pelicula.overview }}
             </div>
